boot/tests/errors/record_noinfer_err/record_noinfer_err.c
#error record_noinfer_err:8:18 Can't infer type of record.

